# asimov-apple-module

./: CHANGES.md  Cargo.toml  README.md
src/: lib.rs
src/emitter/: calendar.rs  contacts.rs
src/jq/: calendar.jq  contacts.jq
